<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dk.sundhed.ehealth.referenceclients</groupId>
    <artifactId>ehealth-reference-clients-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ehealth-reference-clients</name>
    <description>FUT reference client implementations.</description>

    <modules>
        <module>common</module>
        <module>clinician-client</module>
        <module>citizen-client</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <java.version>${maven.compiler.release}</java.version>
        <!-- Retain method parameter names in the bytecode so Spring MVC can bind @PathVariable /
             @RequestParam without an explicit name. spring-boot-starter-parent sets this by
             default; we import the BOM instead of inheriting the parent, so we set it here. -->
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Spring Boot and HAPI versions must be kept in sync. HAPI bundles its own Spring Boot transitive deps. -->
        <springframework.boot.version>3.4.13</springframework.boot.version>
        <springframework.version>6.2.18</springframework.version>
        <hapi.fhir.version>8.8.0</hapi.fhir.version>

        <thymeleaf-layout-dialect.version>3.4.0</thymeleaf-layout-dialect.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springframework.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${springframework.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-bom</artifactId>
                <version>${hapi.fhir.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>dk.sundhed.ehealth.referenceclients</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${springframework.boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
